HW13/E-5.1.32-CountMatches/wdir_msg/compile.err

CountMatches.java:14: error: incompatible types: String cannot be converted to Matcher
        Matcher matcher = input;
                          ^
1 error


